--- a/public/css/style_1.css
+++ b/public/css/style_1.css
@@ -2,7 +2,7 @@
   <#时间 = "4:15:39">
   <#人物 = "buff" >
   <#备注 = " ">     */
-body,ol,ul,h1,h2,h3,h4,h5,h6,p,th,td,dl,dd,form,fieldset,legend,input,textarea,select{margin:0;padding:0} 
+body,ol,ul,h1,h2,h3,h4,h5,h6,p,th,td,dl,dd,form,fieldset,legend,input,textarea,select,pre{margin:0;padding:0} 
 body{font:16px/1.5 "Microsoft Yahei", 微软雅黑, arial,"宋体";background:#fff;-webkit-text-size-adjust:100%;} 
 a{color:#2d374b;text-decoration:none} a:hover{text-decoration:underline} em{font-style:normal} 
 li{list-style:none} img{border:0;vertical-align:middle} table{border-collapse:collapse;border-spacing:0} 
